[gd_scene load_steps=5 format=4 uid="uid://cyxkuj5kq54nc"]

[ext_resource type="PackedScene" uid="uid://cn72sxk4p3bmy" path="res://hex_map.tscn" id="1_70yv6"]
[ext_resource type="Script" uid="uid://dvatxqs8xncs8" path="res://game_manager.gd" id="1_smx3j"]
[ext_resource type="PackedScene" uid="uid://dt4usc8nw01ri" path="res://ship_manager.tscn" id="3_o2178"]
[ext_resource type="Script" uid="uid://cconvhbiiux2r" path="res://scripts/camera_controller.gd" id="4_d5upp"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_smx3j")

[node name="HexMap" parent="." instance=ExtResource("1_70yv6")]
tile_map_data = PackedByteArray("AAAGAAQAAAABAAAAAAAGAAMAAAACAAAAAAAHAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAGAAIAAAACAAAAAAAFAAEAAAACAAAAAAAFAAIAAAACAAAAAAAGAAUAAAABAAAAAAAFAAQAAAABAAAAAAAFAAUAAAABAAAAAAAHAAQAAAABAAAAAAAHAAUAAAABAAAAAAAFAAMAAAACAAAAAAAEAAMAAAACAAAAAAAHAAIAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAEAAAABAAAAAAAKAAIAAAACAAAAAAAKAAMAAAACAAAAAAALAAIAAAACAAAAAAALAAEAAAACAAAAAAAKAAEAAAABAAAAAAAIAAEAAAABAAAAAAAHAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAABAAAAAAAEAAUAAAAAAAAAAAACAAQAAAAAAAAAAAABAAQAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAYAAAAAAAAAAAADAAYAAAAAAAAAAAACAAYAAAAAAAAAAAACAAUAAAAAAAAAAAD/////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAAAAAEAAAACAAAAAAABAAEAAAACAAAAAAABAAAAAAACAAAAAAABAAIAAAACAAAAAAACAAIAAAACAAAAAAACAAAAAAABAAAAAAADAP//AAABAAAAAAAEAAAAAAABAAAAAAAEAAEAAAABAAAAAAAEAAIAAAABAAAAAAADAAEAAAABAAAAAAAHAP//AAAAAAAAAAAKAAAAAAABAAAAAAAAAAMAAAABAAAAAAD//wMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAA=")

[node name="ShipManager" parent="." instance=ExtResource("3_o2178")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 0)
anchor_mode = 0
script = ExtResource("4_d5upp")
